--- a/templates/movies/movie.html
+++ b/templates/movies/movie.html
@@ -46,7 +46,7 @@
                     <h4 class="media-heading"><a href="{{ theatre.get_absolute_url }}">{{ theatre.0.theatre.name }} | {{ theatre.0.theatre.address }}</a></h4>
                     <ul>
                         {% for showtime in theatre %}
-                        <li>{% if user.is_authenticated %}<a href="#">{{ showtime.time|time:"h:i A" }}</a>{% else %}
+                        <li>{% if user.is_authenticated %}<a href="{% url 'Reserve' showtime.id %}">{{ showtime.time|time:"h:i A" }}</a>{% else %}
                             <p>{{ showtime.time|time:"h:i A" }}</p>{% endif %}</li>
                         {% endfor %}
                     </ul>
